update code, test shared theme